# m2dev-server-src

./: .gitignore  CMakeLists.txt  README.md  build-and-move.sh  depinit.py  dist2loc.py
.github/workflows/: main.yml
src/: CMakeLists.txt
src/common/: CMakeLists.txt  VnumHelper.h  auction_table.h  billing.h  building.h  cache.h  d3dtype.h  item_length.h  length.h  noncopyable.h  packet_headers.h  pool.h  service.h  singleton.h  stl.h  tables.h  teen_packet.h  utils.h
src/db/: AuctionManager.cpp  AuctionManager.h  BlockCountry.cpp  BlockCountry.h  CMakeLists.txt  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerLogin.cpp  ClientManagerParty.cpp  ClientManagerPlayer.cpp  Config.cpp  Config.h  CsvReader.cpp  CsvReader.h  DBManager.cpp  DBManager.h  GuildManager.cpp  GuildManager.h  HB.cpp  HB.h  ItemAwardManager.cpp  ItemAwardManager.h  ItemIDRangeManager.cpp  ItemIDRangeManager.h  Lock.cpp  Lock.h  LoginData.cpp  LoginData.h  Main.cpp  Main.h  Marriage.cpp  Marriage.h  Monarch.cpp  Monarch.h  (+17 more)
src/game/: BattleArena.cpp  BattleArena.h  BlueDragon.cpp  BlueDragon_Skill.h  CMakeLists.txt  ClientPackageCryptInfo.cpp  ClientPackageCryptInfo.h  DragonLair.cpp  DragonLair.h  DragonSoul.cpp  DragonSoul.h  FileMonitor_FreeBSD.cpp  FileMonitor_FreeBSD.h  HackShield.cpp  HackShield.h  HackShield_Impl.cpp  HackShield_Impl.h  IFileMonitor.h  MarkConvert.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  MarkManager.h  OXEvent.cpp  OXEvent.h  PetSystem.cpp  PetSystem.h  SecureCipher.cpp  SecureCipher.h  SpeedServer.cpp  SpeedServer.h  TrafficProfiler.cpp  TrafficProfiler.h  XTrapManager.cpp  XTrapManager.h  affect.cpp  affect.h  affect_flag.h  ani.cpp  ani.h  (+264 more)
src/libgame/: CMakeLists.txt  attribute.cpp  attribute.h  grid.cpp  grid.h  targa.cpp  targa.h
src/liblua/: CMakeLists.txt
src/liblua/include/: lauxlib.h  lua.h
src/liblua/src/: CMakeLists.txt  lapi.c  lcode.c  lcode.h  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  llex.c  llex.h  llimits.h  lmem.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  ltable.c  ltable.h  ltests.c  ltm.c  ltm.h  lundump.c  lvm.c  lzio.c  lzio.h
src/liblua/src/lib/: lauxlib.c  lbaselib.c  ldblib.c  liolib.c  lmathlib.c  loadlib.c  lstrlib.c  ltablib.c
src/liblua/src/lua/: CMakeLists.txt  lua.c
src/liblua/src/luac/: CMakeLists.txt  luac.c  print.c
src/libpoly/: Base.cpp  Base.h  CMakeLists.txt  Constants.h  Poly.cpp  Poly.h  SymTable.cpp  SymTable.h  Symbol.cpp  Symbol.h  main.cpp
src/libsql/: AsyncSQL.cpp  AsyncSQL.h  CMakeLists.txt  Semaphore.cpp  Semaphore.h  Statement.cpp  Statement.h  Tellwait.cpp  Tellwait.h  libsql.h  stdafx.h
src/libthecore/: CMakeLists.txt  DES_table.h  buffer.cpp  buffer.h  crypt.h  des.cpp  fdwatch.cpp  fdwatch.h  gost.cpp  gost_old.cpp  hangul.cpp  hangul.h  heart.cpp  heart.h  kstbl.cpp  kstbl.h  log.cpp  log.h  main.cpp  main.h  memcpy.cpp  memcpy.h  signal.cpp  signal.h  socket.cpp  socket.h  stdafx.h  syslog_rotate_sink.h  tea.cpp  typedef.h  utils.cpp  utils.h  xdirent.cpp  xdirent.h  xgetopt.cpp  xgetopt.h  xmd5.cpp  xmd5.h
src/qc/: CMakeLists.txt  crc32.h  qc.cpp
